--- a/softhands_description/package.xml
+++ b/softhands_description/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="riccardo@todo.todo">riccardo</maintainer>
+  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
